--- a/statisk_site/css/style.css
+++ b/statisk_site/css/style.css
@@ -192,10 +192,6 @@ nav ul li a:hover {
   z-index: 10;
 }
 
-.isOnSale {
-  visibility: visible;
-}
-
 .price_container {
   display: flex;
   gap: 10px;
@@ -232,6 +228,10 @@ nav ul li a:hover {
   text-transform: uppercase; /* Gør teksten store bogstaver */
   color: #ea3b2e;
   text-align: center;
+}
+
+.productContainer .soldout_label {
+  font-size: 3rem;
 }
 
 /* Bestemt product */
